overflow fix on body

--- a/sylkemohle/src/Hero.css
+++ b/sylkemohle/src/Hero.css
@@ -3,6 +3,7 @@
   margin: 0 auto;
   max-width: 100svw;
   text-align: center;
+  overflow-x: clip;
 }
 .navbar {
   text-transform: uppercase;
