--- a/sylkemohle/src/servicedetail.css
+++ b/sylkemohle/src/servicedetail.css
@@ -32,10 +32,7 @@
           font-size: 2rem;
         }
 
-        body {
-          overflow-x: hidden;
-        
-      }
+      
       
       .nav-links, .nav-link{
         gap: 1px;
